# ChangeLog for dev-perl/Net-Twitter-Lite
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*Net-Twitter-Lite-0.08006 (16 Mar 2010)

  16 Mar 2010; James Rowe <jnrowe@gmail.com>
  +Net-Twitter-Lite-0.08006.ebuild, +metadata.xml:
  Initial ebuild, by me. Required for twirrsi.
