@@ -1,0 +1,28 @@
+--- !ditz.rubyforge.org,2008-03-06/issue 
+title: dev-perl/Net-Twitter-Lite-0.09001 version bump.
+desc: ""
+type: :feature
+component: misc-overlay
+release: current
+reporter: James Rowe <jnrowe@gmail.com>
+status: :closed
+disposition: :fixed
+creation_time: 2010-05-12 18:19:13.523933 Z
+references: []
+
+id: ca7169a70dce130fc24a3f805df49f0bb5a181a5
+log_events: 
+- - 2010-05-12 18:19:13.979805 Z
+  - James Rowe <jnrowe@gmail.com>
+  - created
+  - ""
+- - 2010-05-12 18:19:18.923904 Z
+  - James Rowe <jnrowe@gmail.com>
+  - changed status from unstarted to in_progress
+  - ""
+- - 2010-05-12 18:23:55.847841 Z
+  - James Rowe <jnrowe@gmail.com>
+  - closed with disposition fixed
+  - ""
+claimer: 
+git_branch: 
