@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST Net-Twitter-Lite-0.08006.tar.gz 66726 RMD160 ec3ee3dc9886b6bccd2e78d547981b03d039f5f2 SHA1 dad388ea5bc75ef4b6a8e9a726752fec4a18abcf SHA256 504a5765be88fefafef83d9cc95f6ae993e1b4b13fc9a4e82923965b567b3c65
+DIST Net-Twitter-Lite-0.09001.tar.gz 71855 RMD160 c40bd0a38a4790468b3a63195d8226b268d02df6 SHA1 207ffa0d2ec1b1d4ea648bfbe0c46fb07aa85188 SHA256 198facb106412789b480694e21a89db2df3ad4077c8060926487870f4b607489
 EBUILD Net-Twitter-Lite-0.08006.ebuild 443 RMD160 c287318e2a155f80ad2f5eaad031f9a701c74881 SHA1 3c484747ceff082bffa47242d361e81fd6f2c297 SHA256 66044537ed43f34301935623fec983b6ef1b049bd6f6d0813fcb95f730d67a9f
-MISC ChangeLog 311 RMD160 ff61d42849bb5f147fc7a6d945f0723cbbfc3350 SHA1 c20e4428fb2603f0be8518a103b5506ac026741c SHA256 07f8960692f00503be901f56a8a5809e3f87c77caa24251be2ba2e4fd656a11e
+EBUILD Net-Twitter-Lite-0.09001.ebuild 470 RMD160 7b6d140574bf38640482eeffb7e8d541e93637c4 SHA1 23046eb0942cd3bed3d07f547425889262fab6b3 SHA256 12b0358525d5682f6cebb408b6ab22a8e325170a7f48a2871f5428a84bd24717
+MISC ChangeLog 456 RMD160 df808c326cb662629f65dad60d375192d043fc04 SHA1 b54b3197073b895215177c21ceb69afb0b8836a9 SHA256 0ebbb53080d5b4b8fc2074d1b7f596eab27a7069a3886253357641687fc577b6
 MISC metadata.xml 891 RMD160 b8fa8c2df8633c9178b2c880d575eda5e9f01ff1 SHA1 c3bd92d0899304b577673742817cc937fba85a98 SHA256 bdb4daae1acae7a20def17f6f8d808d227a041699843c3d41a4a332ab77ab6d1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkufrOsACgkQzJrj3cAXR0kfHACaAvoAL+aGRxtDvmaqg818kxYa
-VVgAnRn89nJGOKBeTvgTfsdl79E1RUWB
-=o5mC
+iEYEARECAAYFAkvq8fgACgkQzJrj3cAXR0mqSwCdEd6vSKgmbC/+jSWrV2QR3eP2
+jQAAoLYiAxhYd8AZksmpVEXvA32XOAlo
+=PRAp
 -----END PGP SIGNATURE-----
