@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*Net-Twitter-Lite-0.09001 (12 May 2010)
+
+  12 May 2010; James Rowe <jnrowe@gmail.com>
+  +Net-Twitter-Lite-0.09001.ebuild:
+  Version bump [ca7].
+
 *Net-Twitter-Lite-0.08006 (16 Mar 2010)
 
   16 Mar 2010; James Rowe <jnrowe@gmail.com>
